# api-entreprise

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  CHANGELOG.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: publish-pypi.yml  publish-test-pypi.yml
src/api_entreprise/: __init__.py  api.py  cli.py  exceptions.py  handlers.py
src/api_entreprise/healthcheck/: api.py  config.py  healthcheck_status.py
src/api_entreprise/models/: __init__.py  certification_qualibat.py  certification_rge.py  chiffre_daffaires.py  config.py  context_info.py  donnees_etablissement.py  errors.py  healthcheck_status.py  numero_tva.py
src/api_entreprise/utils/: metaclasses.py  url.py
src/python_library_template/: help.py
src/python_library_template/data/: fichier.txt
tests/: fixtures.py  test_certification_qualibat.py  test_certification_rge.py  test_chiffre_d_affaires.py  test_donnees_etablissement.py  test_errors.py  test_exemple.py  test_numero_tva.py
tests/etablissement/: test_donnees_etablissement.py  test_donnees_etablissement_nonreg.py  test_personne_physique_attributs.py
tests/healthcheck/: test_healthcheck.py
tests/utils/: test_url.py
tests/vcr/donnees_etablissement/: 429-answer.yaml  ca.megalis.yml  certif_qualibat.megalis.yml  certif_rge.megalis.yml  entreprise_no_activite_principale.yaml  megalis.yaml  no_date_creation.yml  same_recipient.error.yaml  tva.megalis.yml
tests/vcr/donnees_etablissement/forges/: 429-answer.yaml  megalis-no-naf-no-l6-on-acheminementpostal.yaml  megalis-no-naf.yaml  tva.404.yml
tests/vcr/donnees_etablissement/healthcheck/: healthcheck_insee_sirene_bad_gateway.yml  healthcheck_insee_sirene_ok.yml  healthcheck_insee_sirene_unknown.yml
